2012-03-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am, data/swathdic.lst: Convert word list to UTF-8.

2012-03-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

2012-02-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.4.2 ===

2012-02-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.cpp (FilterRTF::GetNextToken):
	  - Fix GCC warnings on sscanf format strings.

2012-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - The last "wState" use is also temporary, replaced with
	    intermediate object.

2012-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - Split out the assignment in if-condition.
	  - Delay the "curState" declaration and merge the steps.

2012-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - Declare vars where they are used.
	  - "Idx" var type from short int to int, to match function args it
	    keeps up with.
	  - First "wState" use is temporary, replaced with intermediate object.
	  - "tmps" var eliminated, replaced with immediate assignment.
	  - Merge "looptime" break into while-loop condition.

2012-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Change MaxWordSeg SepType::Score type from float to int.

	All calculations are already in int, and the casts are just
	unnecessary, and indicates that "float" is never intended.
	Change short int to int to be more machine-native.

	* src/worddef.h:
	  - Change SepType::Score type to int.
	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - Change types of "bestScore", "tmps", "score[]" to int.
	  - Drop all (short int) type casts.

2012-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::CreateSentence):